1.5.12:
	More broken servers in the default config file
	Fix wrong sync queue counter computations (Attila Bruncsak)
1.5.11:
	Don't block threads while reloading config (Attila Bruncsak)
	Allow regex with # in the configuration (Hajimu Umemoto)
	Ignore self as sync peer (Matthias Scheler and Hajimu Umemoto)
	Document ressource shortage for memory and file descriptor
	Remove outdated documentation about IPv6
1.5.10:
	Fix a build problem on systems that don't have IPv6 (Hajimu Umemoto)
	Fix a minor bug with SPF (Hajimu Umemoto)
1.5.9:
	Give credits to the various contributors in the man pages
	Do not match bogus IPv6 addresses in the dump file (Hajimu Umemoto)
	Quick statistics at the end of the dump file (Remy Card)
	Fix build on Tru64 Unix, including for IPv6 (Attila Bruncsak)
	Fix a SPF log problem (Alexandre Cherif)
1.5.8:
	Fix a bug in configure.ac (Hajimu Umemoto)
1.5.7:
	malloc e-mail addresses, avoids truncation at 32 chars (Hajimu Umemoto)
1.5.6:
	Configurable MX sync bind port and address (Cyril Guibourg)
1.5.5:
	Disable getnameinfo as in causes an ABI clash in Linux
	Fix bad substitutions in rc scripts
	Fix build problems on Solaris
1.5.4:
	Avoid race conditions when reloading the config (Attila Bruncsak)
	Full blown IPv6 support, from Hajimu Umemoto
	rc-debian.sh script, from Joel Bertrand
1.5.3:
	Fix unproper MX sync port on little endian machines
1.5.2:
	Add a template Makefile to manually tweak if configure fails
	Feed strtkok_r with a NULL initialized pointer
	More mixed I/O fix: another fflush after a fgets() 
1.5.1:
	Fix mixed I/O in MX sync on Solaris, from Attila Bruncsak
	Check that compiler and linker accept -Wall
	Document the comment on end of line bug
	Clean up rc-solaris.sh on make clean
	syslog the expired autowhite entry correctly, from Mattieu Herrb
	Handle mailing lists with unique sender by removing '^.*=' from sender
	Minor bug fixes in queue management from Wolfgang Solfrank
1.4:
	New stable branch
1.3.9: