@@ -1,6 +1,7 @@
 1.5.12:
 	More broken servers in the default config file
 	Fix wrong sync queue counter computations (Attila Bruncsak)
+	Add a -c option to just check the config and exit (Klas Heggemann)
 1.5.11:
 	Don't block threads while reloading config (Attila Bruncsak)
 	Allow regex with # in the configuration (Hajimu Umemoto)
